Add new task, get all tasks

--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -6,7 +6,7 @@
             "Microsoft.Hosting.Lifetime": "Information"
         }
     },
-    "ConnectionStrings": {
-        "SqlDb": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=family-task-db;Integrated Security=True;"
-    }
+  "ConnectionStrings": {
+    "SqlDb": "Data Source=DESKTOP-SK7G882;Initial Catalog=family_task_db;Integrated Security=False;uid=sa;pwd=sa;"
+  }
 }
